--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,14 @@ name: auto_build
 on: push
 jobs:
   build_project:
-    runs-on: manjaro-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
       - name: build 1
         run: |
-          cd 01/1
           mkdir build 
           cd build 
           cmake .. 
           cmake  --build .
-      - name: build 2
-        run: |
-          cd 01/2/dynamic
-          mkdir build 
-          cd build 
-          cmake .. 
-          cmake  --build .
-      - name: build 3
-        run: |
-          cd 01/2/static
-          mkdir build 
-          cd build 
-          cmake .. 
-          cmake  --build .
+
