--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: auto_build
+name: build
 on: push
 jobs:
   build_project:
-    runs-on: ubuntu-latest
+    runs-on: manjaro-latest
     steps:
       - name: Get repository code
         uses: actions/checkout@v1
