--- a/02-sdl-hw/shared-linked/CMakeLists.txt
+++ b/02-sdl-hw/shared-linked/CMakeLists.txt
@@ -20,4 +20,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 add_definitions(-Wall -O2)
 
 find_package(SDL3 REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3)
+target_link_libraries(${PROJECT_NAME} PRIVATE SDL3::SDL3-shared)
