added shared linking for engine

--- a/03-sdl-engine-hw/CMakeLists.txt
+++ b/03-sdl-engine-hw/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_subdirectory(loop)
-add_subdirectory(engine-1)
+add_subdirectory(0-loop)
+add_subdirectory(1-engine)
+add_subdirectory(2-engine-dll)
