--- a/03-sdl-engine-hw/3-engine-exe-hot_reload/CMakeLists.txt
+++ b/03-sdl-engine-hw/3-engine-exe-hot_reload/CMakeLists.txt
@@ -9,12 +9,11 @@ endif()
 
 project(sdl-engine-3 CXX)
 
-
 add_definitions(-O2)
 
 find_package(SDL3 REQUIRED)
 find_package(SDL3_image REQUIRED)
-add_library(game_lib SHARED game.cxx texture.hxx)
+add_library(game_lib SHARED engine.hxx game.cxx texture.hxx)
 target_include_directories(game_lib PUBLIC CMAKE_CURRENT_SOURCE_DIR)
 
 add_executable(${PROJECT_NAME} engine.cxx engine.hxx)
